# vv-chain-services

./: .ai-guidelines  .gitconfig  .gitignore  CONTRIBUTING.md  FOLDER-STRUCTURE.md  README.md  WORKSPACE.md  package-lock.json  packages.json  veritasvault.code-workspace  vv-chain-services.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
docs/: architecture.md  azure.infra.md  azure.md  coingecko.md  contracts.md  deffillama.md  eigenlayer.md  (+6 more)
src/ml-engine/: main.py  pyproject.toml  requirements.txt
src/ml-engine/Analysis/: black_litterman_analysis.ipynb  exploratory_data_analysis.ipynb
src/ml-engine/Analysis/data/: all_assets_df.csv  df_largest_assets_apy.csv  df_largest_assets_price.csv  df_largest_assets_tvl.csv
src/ml-engine/http_requests/: main_app_endpoints.http
src/ml-engine/main_app/: main.py
src/ml-engine/main_app/data_classes/: BlackLittermanModelData.py  BlackLittermanModelDataSchema.json  BlackLittermanModelResult.py  BlackLittermanModelResultSchema.json  BlackLittermanModelResults.py  bl_model_data.py  bl_model_data_schema.json
src/ml-engine/main_app/infrastructure/: coin_gecko.py  defi_llama.py  market_data.py
src/ml-engine/main_app/models/: BlackLittermanYieldModel.py  blacklittermanyieldmodel.py
src/ml-engine/main_app/models/black_litterman/: BlExplicitReturnViewGenerator.py  BlPortfolioModel.py
src/ml-engine/static_data/: symbol_to_contract_address_map.json
src/ml-engine/tests/: test_black_litterman.py  test_data_classes.py
src/ml-engine/tests/test_data/: black_litterman_explicit_view_test_data.json
(+51 files in other folders)
