[tool.poetry]
name = "vv-chain-services"
version = "0.1.0"
description = "ML Engine and Azure Function integration for VeritasVault project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src/ml-engine/main_app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "~0.34.2"
numpy = "~2.2.5"
pandas = "~2.2.3"
yfinance = "~0.2.57"
matplotlib = "~3.10.1"
pyportfolioopt = "~1.5.6"
starlette = "~0.46.2"
dataclasses-json = "~0.6.7"
jsonschema = "~4.23.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
ruff = "^0.1.5"
jupyter = "^1.0"

[tool.pytest.ini_options]
testpaths = ["tests", "src/ml-engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | docs
  | notebooks
)/
'''

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "docs",
    "notebooks",
]
# Same as Black.
line-length = 88
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Target Python 3.11.
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
